--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "mongodb": "^3.0.0",
     "mongoose": "^4.13.7",
+    "oauth2-server": "^2.4.1",
     "path": "^0.12.7",
     "winston": "^2.4.0"
   }
